# CryNoesis

./: readme.md
module/: CMakeLists.txt  Plugin.cpp  Plugin.h  StdAfx.h
module/Components/NsApp/Interactivity/: App.Interactivity.cpp
module/FG_Nodes/: FGFontLoader.h
module/Providers/: FontProvider.cpp  FontProvider.h  XamlProvider.cpp
module/Renderer/: LayoutDefinitions.h  Renderer.cpp  Renderer.h  StateDefinitions.h  Texture.cpp
shaders/: Noesis.ext
shaders/HWScripts/CryFX/: Noesis.cfx
